test(streaming): exercise Kafka graph restore